--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-  <title>tripify</title>
-
+  <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
+  <title>Tripify</title>
   <link rel="stylesheet" href="css/root.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/responsive.css">
@@ -20,27 +19,34 @@
 <body>
 
   <!-- header start -->
-  <header>
+  <header class="container">
     <div class="logo">
-      <img src="images/images.jpeg" alt="logo">
+      <img src="images/logo.png" alt="logo"> <span class="logo-name">tripify</span> </img>
     </div>
-    <div class="menu">
-      <ul>
-        <li><a href="index.html"> home </a></li>
-        <li><a href="car.html"> car </a></li>
-        <li><a href="flight.html">  flight </a></li>
-        <li><a href="hotel.html"> hotel </a></li>
-        <li><a href="tour.html"> tour </a></li>
-        <li><a href="404"> 404 </a></li>
-        <li><a href="login"> login </a></li>
-        <li><a href="dashbord"> dashbord </a></li>
-      </ul>
-    </div>
-    <div class="menu-btn">
-      <span></span>
-      <span></span>
-      <span></span>
-    </div>
+
+
+
+      
+      <div class="menu-btn">
+        <span>l</span>
+        <span>l</span>
+        <span>l</span>
+      </div>
+      <div class="menu ">
+        <ul>
+          <li><a href="index.html"> home </a></li>
+          <li><a href="car.html"> car </a></li>
+          <li><a href="flight.html"> flight </a></li>
+          <li><a href="hotel.html"> hotel </a></li>
+          <li><a href="tour.html"> tour </a></li>
+          <li><a href="404"> 404 </a></li>
+          <li><a href="login"> login </a></li>
+          <li><a href="dashbord"> dashbord </a></li>
+        </ul>
+      </div>
+
+
+
   </header>
   <!-- header end -->
 
@@ -48,6 +54,68 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- footer start -->
+
+<footer>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 col-md-6 col-lg-3">
+        <div class="colname">News</div>
+        <div class="collist">
+          <li>hello</li>
+          <li>hello</li>
+          <li>hello</li>
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-6 col-lg-3">
+        <div class="colname">xyz</div>
+        <div class="collist">
+          <li>hello</li>
+          <li>hello</li>
+          <li>hello</li>
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-6 col-lg-3">
+        <div class="colname">xyz</div>
+        <div class="collist">
+          <li>hello</li>
+          <li>hello</li>
+          <li>hello</li>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
+
+<hr>
+<div class="container">
+  <footerfoot>
+    <h4>
+      &copy; all rights are recived by tripify
+    </h4>
+  </footerfoot>
+</div>
+<!-- footer end -->
+<hr>
+
+<script src="js/index.js"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
