Tour page added by apporva

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <li><a href="car.html"> car </a></li>
           <li><a href="flight.html"> flight </a></li>
           <li><a href="hotel.html"> hotel </a></li>
-          <li><a href="tour.html"> tour </a></li>
+          <li><a href="Tour.html"> tour </a></li>
           <li><a href="404"> 404 </a></li>
           <li><a href="login"> login </a></li>
           <li><a href="dashbord"> dashbord </a></li>
