--- a/Tour.html
+++ b/Tour.html
@@ -147,7 +147,7 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="user-review">
-                            <p>hello my self priya sharma</p>
+                            <p>It's really thrilling and amazing experience, hospitality was awesome. People there are very caring in nature love to see their clients to be happy,food was good. It's a Happy Stay,its good place to experience and amazing place for the natures fan and lovers.I enjoyed alot there love to visit once again.</p>
                             <h5>Priya Sharma</h5>
                             <small>Manali</small>
                         </div>
@@ -155,7 +155,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="user-review">
-                            <p>hello my self priyanka desai</p>
+                            <p>Baga beach, on the Fort Aguada road, Goa, is one of the best beaches I have seen in India.The Goa tourism authority is certainly putting in extra effort to provide an excellent overall experience to the tourists,they have taken very good care of health and safety aspects,hygiene and many more</p>
                             <h5>Priyanka Desai</h5>
                             <small>Goa</small>
                         </div>
@@ -164,8 +164,8 @@
 
                     <div class="col-md-4">
                         <div class="user-review">
-                            <p>hello my self suraj bhagwat</p>
-                            <h5>Suraj Bhagwat</h5>
+                            <p>It was a pleasure to travel in ooty which was a very excitible experience the main tourist attraction are beaituiful such as ooty lake, as it gives a beautiful feeling to visit through hills and jungle in mini train,doddabetta peak which is an very good experience and a good place for the natures fan and lovers.</p>
+                            <h5>Suraj Bhat</h5>
                             <small>Ooty</small>
                         </div>
                         <img src="img\user3.jpg">
@@ -177,28 +177,28 @@
         <section class="footer">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-3">
+                    <div class"col-md-3">
                         <img src="img\logo.png" class="footer-logo">
                     </div>
-                    <div class="col-md-3">
+                    <div class"col-md-3">
                         <h4>Features</h4>
                         <p>Deals & offers</p>
                         <p>Customer Reviews</p>
                         <p>Cancellation Policy</p>
                     </div>
 
-                    <div class="col-md-3">
+                    <div class"col-md-3">
                         <h4>Quick Contact</h4>
-                        <p><i class="fa fa-phone_square"></i>9134567823</p>
+                        <p><i class="fa fa-phone"></i>9134567823</p>
                         <p><i class="fa fa-envelope"></i>xyz@gmail.com</p>
                         <p><i class="fa fa-home"></i>xyz Road,ABC city</p>
                     </div>
 
-                    <div class="col-md-3">
+                    <div class"col-md-3">
                         <h4>Follow Us On</h4>
-                        <p><i class="fa fa-facebook-official"></i>Facebook</p>
-                        <p><i class="fa fa-instagram"></i>Instagram</p>
-                        <p><i class="fa fa-twitter"></i>Twitter</p>
+                        <p><i class="fab fa-facebook"></i>Facebook</p>
+                        <p><i class="fab fa-instagram"></i>Instagram</p>
+                        <p><i class="fab fa-twitter"></i>Twitter</p>
                     </div>
 
                 </div><hr>
